# EDD

./: README.md
.ngrest/: name
Practica 1/: CMakeLists.txt
Practica 1/practica_1/src/: ColaServicio.cpp  ColaServicio.h  Lista.cpp  Nodo.cpp  Nodo.h  PilaRecurso.cpp  Practica_1.h
Proyecto 1/: CMakeLists.txt
Proyecto 1/pruebas/: CMakeLists.txt
Proyecto 1/pruebas/src/: ListaMes.cpp  ListaMes.h  ListaSemana.cpp  ListaSemana.h  ListaSesiones.cpp  ListaSesiones.h  ListaTratamiento.cpp  ListaTratamiento.h  ListaUsuarios.cpp  ListaUsuarios.h  ListaYears.cpp  ListaYears.h  MatrizOrtogonal.cpp  MatrizOrtogonal.h  NodoSemana.cpp  NodoSemana.h  NodoTratamiendo.cpp  NodoTratamiendo.h  NodoUsuario.cpp  NodoUsuario.h  Proyecto1.cbp  Proyecto1.depend  Proyecto1.layout  main.cpp  pruebas.cpp  pruebas.h  toBase64.cpp  toBase64.h
practica_1/: CMakeLists.txt
practica_1/src/: Lista.h  NodoRecurso.cpp  NodoRecurso.h  NodoServicio.cpp  NodoServicio.h  PilaRecurso.h  Practica_1.cpp
