cmake_minimum_required(VERSION 2.6)

project (pruebas CXX)

set(PRUEBAS_HEADERS pruebas.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(PRUEBAS_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(PRUEBAS_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${PRUEBAS_HEADERS})

CODEGEN_FILES(PRUEBAS_CODEGEN_SOURCES ${PRUEBAS_CODEGEN_DIR} ${PRUEBAS_HEADERS})

add_custom_command(OUTPUT ${PRUEBAS_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${PRUEBAS_CODEGEN_DIR} -t service ${PRUEBAS_HEADERS}
    DEPENDS ${PRUEBAS_HEADERS_PATHS}
)

file(GLOB PRUEBAS_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND PRUEBAS_SOURCES ${PRUEBAS_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(pruebas MODULE ${PRUEBAS_SOURCES})

set_target_properties(pruebas PROPERTIES PREFIX "")
set_target_properties(pruebas PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(pruebas ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
